# flamerite_ha

./: LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: push.yml
custom_components/flamerite/: __init__.py  climate.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  select.py  switch.py
custom_components/flamerite/translations/: en.json
